@@ -672,6 +672,7 @@ following image formats are supported:
 @item LucasArts SANM         @tab     @tab  X
     @tab Used in LucasArts SMUSH animations.
 @item lossless MJPEG         @tab  X  @tab  X
+@item MagicYUV Lossless Video @tab    @tab  X
 @item Microsoft ATC Screen   @tab     @tab  X
     @tab Also known as Microsoft Screen 3.
 @item Microsoft Expression Encoder Screen  @tab     @tab  X
